Add ignore directories to rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ AllCops:
   Exclude:
     - '**/tmp/**/*'
     - '**/script/**/*'
+    - '**/vendor/**/*'
+    - .git/**/*
     - Rakefile
     - Gemfile
   UseCache: true
